--- a/kavya.html
+++ b/kavya.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Connect With Me!</h1>
     <ul class="social-links">
-      <li><a href="https://www.snapchat.com/add/kvyat_22" target="_blank">snapchat</a></li>
+      <li><a href="https://www.snapchat.com/add/kvyat_22" target="_blank">Snapchat</a></li>
       <li><a href="https://x.com/kavyaatiwari22?t=FHR3DbISE88EouugaoyksQ&s=35" target="_blank">Twitter</a></li>
       <li><a href="https://www.instagram.com/kavyanjali.tiwari?igsh=MTl3ZXFvNGxndjJzaw==" target="_blank">Instagram</a></li>
       <li><a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></li>
